--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/harold.jpeg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/foto2.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Harold Botero</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://web.facebook.com/harold.botero.1088/" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -85,7 +85,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/harold.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/foto2.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Desarrollador fullstack | Web Developer.</h3>
